integración del middleware transform.input para la transformación de los campos
