# app/Http/Controllers/Api/Company/CompanyClientController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Api\Company;
 use App\Status;
 use App\Company;
 use Illuminate\Http\Request;
+use App\Transformers\ClientTransformer;
 use App\Http\Controllers\Api\ApiControllerV1;
 
 /**
@@ -23,6 +24,7 @@ class CompanyClientController extends ApiControllerV1
     public function __construct()
     {
         $this->middleware('auth:api');
+        $this->middleware('transform.input:'.ClientTransformer::class)->only(['store']);
     }
 
     /**
@@ -85,7 +87,7 @@ class CompanyClientController extends ApiControllerV1
      *                     type="string"
      *                 ),
      *                 @OA\Property(
-     *                     property="city_id",
+     *                     property="city",
      *                     type="integer"
      *                 ),
      *                 @OA\Property(
